# hawateltasks

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  task_hawatel-0.0.1-py3-none-any.whl
sql database structure and data/: db structure.sql
src/task_hawatel/: tasks.py
