[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "task_hawatel"
version = "0.0.1"
authors = [
  { name="filipzygmuntowicz", email="zygmuntowiczf@gmail.com" },
]
description = "Package for task for hawatel"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/filipzygmuntowicz/hawateltasks"
"Bug Tracker" = "https://github.com/filipzygmuntowicz/hawateltasks/issues"